<resources>
    <string name="app_name">ColorMyView</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box five</string>
    <string name="how_to_play">How to play:-</string>
    <string name="tap_the_screen_and_button">Tap the screen and button</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
</resources>